--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
           <img
             src="assets/img/logo.svg"
             alt="QiEvents logo"
-            class="header__logo"
+            width="150px"
           />
         </a>
         <nav class="header__nav">
