--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div class="container">
       <a href="index.html">
-        <img src="assets/img/logo.svg" alt="QiEvents logo" class="header__logo">
+        <img src="assets/img/logo.svg" alt="QiEvents logo" width="150px">
       </a>
       <nav class="header__nav">
         <ul class="nav__list">
